<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>edu.gmu.css</groupId>
  <artifactId>george</artifactId>
  <version>0.1.0-SNAPSHOT</version>
<!--  <packaging>jar</packaging>-->

  <name>george</name>
  <url>https://www.github.com/usuallycwdillon/george</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <!--<geotools.version>20-SNAPSHOT</geotools.version>-->
  </properties>

  <dependencies>
<!--  Dependencies for utilities  -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.1</version>
      <scope>test</scope>
    </dependency>
<!--  Dependencies for spatial computations  -->
    <dependency>
      <groupId>com.uber</groupId>
      <artifactId>h3</artifactId>
      <version>3.7.0</version>
    </dependency>
    <dependency>
      <groupId>de.grundid.opendatalab</groupId>
      <artifactId>geojson-jackson</artifactId>
      <version>1.8.1</version>
    </dependency>
<!--   Dependencies for database   -->
    <dependency>
      <groupId>org.neo4j</groupId>
      <artifactId>neo4j</artifactId>
      <version>4.2.6</version>
    </dependency>
    <dependency>
      <groupId>org.neo4j</groupId>
      <artifactId>neo4j-ogm-core</artifactId>
<!--      <version>3.1.11</version>-->
      <version>3.2.26</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.neo4j</groupId>
      <artifactId>neo4j-ogm-api</artifactId>
<!--      <version>3.1.11</version>-->
      <version>3.2.26</version>
    </dependency>
    <dependency>
      <groupId>org.neo4j</groupId>
      <artifactId>neo4j-ogm-bolt-driver</artifactId>
<!--      <version>3.1.11</version>-->
      <version>3.2.26</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.neo4j</groupId>
      <artifactId>neo4j-ogm-bolt-native-types</artifactId>
      <version>3.2.26</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>1.7.30</version>
    </dependency>
<!--&lt;!&ndash;  Dependencies for caching data before and between runs  &ndash;&gt;-->
<!--    <dependency>-->
<!--      <groupId>com.hazelcast</groupId>-->
<!--      <artifactId>hazelcast</artifactId>-->
<!--      <version>3.12.5</version>-->
<!--    </dependency>-->
<!--    <dependency>-->
<!--      <groupId>com.hazelcast</groupId>-->
<!--      <artifactId>hazelcast-client</artifactId>-->
<!--      <version>3.12.5</version>-->
<!--    </dependency>-->
<!--    <dependency>-->
<!--      <groupId>com.hazelcast.jet</groupId>-->
<!--      <artifactId>hazelcast-jet</artifactId>-->
<!--      <version>3.2.1</version>-->
<!--    </dependency>-->
<!--  MASON and its dependencies-->
    <dependency>
      <groupId>edu.gmu.eclab</groupId>
      <artifactId>mason</artifactId>
      <version>20</version>
    </dependency>
    <dependency>
      <groupId>com.massisframework.j3d</groupId>
      <artifactId>vecmath</artifactId>
      <version>1.6.0.1</version>
    </dependency>
    <dependency>
      <groupId>com.massisframework.j3d</groupId>
      <artifactId>java3d-core</artifactId>
      <version>1.6.0.1</version>
    </dependency>
    <dependency>
      <groupId>java3d</groupId>
      <artifactId>j3d-core-utils</artifactId>
      <version>1.3.1</version>
    </dependency>
    <dependency>
      <groupId>org.beanshell</groupId>
      <artifactId>bsh</artifactId>
      <version>2.0b4</version>
    </dependency>
    <dependency>
      <groupId>javax.media</groupId>
      <artifactId>jmf</artifactId>
      <version>2.1.1e</version>
    </dependency>
    <dependency>
      <groupId>com.itextpdf</groupId>
      <artifactId>itextpdf</artifactId>
      <version>5.5.13.3</version>
    </dependency>
    <dependency>
      <groupId>org.jfree</groupId>
      <artifactId>jcommon</artifactId>
      <version>1.0.24</version>
    </dependency>
    <dependency>
      <groupId>org.jfree</groupId>
      <artifactId>jfreechart</artifactId>
      <version>1.5.0</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-collections4</artifactId>
      <version>4.4</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-math3</artifactId>
      <version>3.6.1</version>
    </dependency>
<!--  A few useful dependencies, not strictly required but make coding easier  -->
    <dependency>
      <groupId>org.jetbrains</groupId>
      <artifactId>annotations</artifactId>
      <version>18.0.0</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.biojava</groupId>
      <artifactId>jcolorbrewer</artifactId>
      <version>5.2</version>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.8</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>one.util</groupId>
      <artifactId>streamex</artifactId>
      <version>0.6.7</version>
    </dependency>
    <dependency>
      <groupId>org.jgrapht</groupId>
      <artifactId>jgrapht-core</artifactId>
      <version>1.3.0</version>
    </dependency>
  </dependencies>
  <repositories>
    <repository>
      <id>maven2-repository.dev.java.net</id>
      <name>Java.net repository</name>
      <url>https://download.java.net/maven/2</url>
    </repository>
  </repositories>
  <build>
    <pluginManagement> <!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
    <plugins>
      <plugin>
        <artifactId>maven-clean-plugin</artifactId>
        <version>3.0.0</version>
      </plugin>
      <!-- see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
      <plugin>
        <artifactId>maven-resources-plugin</artifactId>
        <version>3.0.2</version>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <source>11</source>
          <target>11</target>
          <maxmem>8g</maxmem>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.20.1</version>
<!--          <configuration>-->
<!--              <argLine>-Xmx16g -XX:MaxPermSize=2g</argLine>-->
<!--          </configuration>-->
      </plugin>
      <plugin>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.2.0</version>
          <configuration>
            <archive>
              <manifest>
                <addClasspath>true</addClasspath>
                <classpathPrefix>lib/</classpathPrefix>
                <mainClass>edu.gmu.css.worldOrder.WorldOrder</mainClass>
              </manifest>
            </archive>
          </configuration>
      </plugin>
<!--      <plugin>-->
<!--        <groupId>org.apache.maven.plugins</groupId>-->
<!--        <artifactId>maven-dependency-plugin</artifactId>-->
<!--        <executions>-->
<!--          <execution>-->
<!--            <id>copy-dependencies</id>-->
<!--            <phase>package</phase>-->
<!--            <goals>-->
<!--              <goal>copy-dependencies</goal>-->
<!--            </goals>-->
<!--            <configuration>-->
<!--              <outputDirectory>target/lib</outputDirectory>-->
<!--              <overWriteReleases>false</overWriteReleases>-->
<!--              <overWriteSnapshots>false</overWriteSnapshots>-->
<!--              <overWriteIfNewer>true</overWriteIfNewer>-->
<!--            </configuration>-->
<!--          </execution>-->
<!--        </executions>-->
<!--      </plugin>-->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.2.0</version>
        <executions>
          <execution>
            <id>worldOrder</id>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <filters>
                <filter>
                  <artifact>*:*</artifact>
                  <excludes>
                    <exclude>META-INF/*.SF</exclude>
                    <exclude>META-INF/*.DSA</exclude>
                    <exclude>META-INF/*.RSA</exclude>
                  </excludes>
                </filter>
              </filters>
              <transformers>
                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <mainClass>edu.gmu.css.worldOrder.WorldOrder</mainClass>
                </transformer>
              </transformers>
              <finalName>worldOrder</finalName>
              <shadedArtifactAttached>true</shadedArtifactAttached>
              <shadedClassifierName>jar-with-dependencies</shadedClassifierName>
            </configuration>
          </execution>
<!--          <execution>-->
<!--            <id>worldOrderUI</id>-->
<!--            <phase>package</phase>-->
<!--            <goals>-->
<!--              <goal>shade</goal>-->
<!--            </goals>-->
<!--            <configuration>-->
<!--              <filters>-->
<!--                <filter>-->
<!--                  <artifact>*:*</artifact>-->
<!--                  <excludes>-->
<!--                    <exclude>META-INF/*.SF</exclude>-->
<!--                    <exclude>META-INF/*.DSA</exclude>-->
<!--                    <exclude>META-INF/*.RSA</exclude>-->
<!--                  </excludes>-->
<!--                </filter>-->
<!--              </filters>-->
<!--              <transformers>-->
<!--                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">-->
<!--                  <mainClass>edu.gmu.css.worldOrder.WorldOrderWithUI</mainClass>-->
<!--                </transformer>-->
<!--              </transformers>-->
<!--&lt;!&ndash;              <shadedClassifierName>worldOrderUI</shadedClassifierName>&ndash;&gt;-->
<!--              <finalName>worldOrderUI</finalName>-->
<!--              <shadedArtifactAttached>true</shadedArtifactAttached>-->
<!--              <shadedClassifierName>jar-with-dependencies</shadedClassifierName>-->
<!--            </configuration>-->
<!--          </execution>-->
<!--          <execution>-->
<!--            <id>startHazelcastInstance</id>-->
<!--            <phase>package</phase>-->
<!--            <goals>-->
<!--              <goal>shade</goal>-->
<!--            </goals>-->
<!--            <configuration>-->
<!--              <filters>-->
<!--                <filter>-->
<!--                  <artifact>*:*</artifact>-->
<!--                  <excludes>-->
<!--                    <exclude>META-INF/*.SF</exclude>-->
<!--                    <exclude>META-INF/*.DSA</exclude>-->
<!--                    <exclude>META-INF/*.RSA</exclude>-->
<!--                  </excludes>-->
<!--                </filter>-->
<!--              </filters>-->
<!--              <transformers>-->
<!--                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">-->
<!--                  <mainClass>edu.gmu.css.hazelcast.StartHazelcastInstance</mainClass>-->
<!--                </transformer>-->
<!--              </transformers>-->
<!--&lt;!&ndash;              <shadedClassifierName>startHazelcastInstance</shadedClassifierName>&ndash;&gt;-->
<!--              <finalName>startHazelcastInstance</finalName>-->
<!--            </configuration>-->
<!--          </execution>-->
<!--            <execution>-->
<!--            <id>loadSteppables</id>-->
<!--            <phase>package</phase>-->
<!--            <goals>-->
<!--              <goal>shade</goal>-->
<!--            </goals>-->
<!--            <configuration>-->
<!--              <filters>-->
<!--                <filter>-->
<!--                  <artifact>*:*</artifact>-->
<!--                  <excludes>-->
<!--                    <exclude>META-INF/*.SF</exclude>-->
<!--                    <exclude>META-INF/*.DSA</exclude>-->
<!--                    <exclude>META-INF/*.RSA</exclude>-->
<!--                  </excludes>-->
<!--                </filter>-->
<!--              </filters>-->
<!--              <transformers>-->
<!--                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">-->
<!--                  <mainClass>edu.gmu.css.hazelcast.LoadSteppables</mainClass>-->
<!--                </transformer>-->
<!--              </transformers>-->
<!--              <finalName>loadSteppables</finalName>-->
<!--              <shadedArtifactAttached>true</shadedArtifactAttached>-->
<!--              <shadedClassifierName>jar-with-dependencies</shadedClassifierName>-->
<!--&lt;!&ndash;              <shadedClassifierName>loadSteppables</shadedClassifierName>&ndash;&gt;-->
<!--            </configuration>-->
<!--          </execution>-->
<!--          <execution>-->
<!--            <id>dataReporter</id>-->
<!--            <phase>package</phase>-->
<!--            <goals>-->
<!--              <goal>shade</goal>-->
<!--            </goals>-->
<!--            <configuration>-->
<!--              <filters>-->
<!--                <filter>-->
<!--                  <artifact>*:*</artifact>-->
<!--                  <excludes>-->
<!--                    <exclude>META-INF/*.SF</exclude>-->
<!--                    <exclude>META-INF/*.DSA</exclude>-->
<!--                    <exclude>META-INF/*.RSA</exclude>-->
<!--                  </excludes>-->
<!--                </filter>-->
<!--              </filters>-->
<!--              <transformers>-->
<!--                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">-->
<!--                  <mainClass>edu.gmu.css.hazelcast.WorldDataReporter</mainClass>-->
<!--                </transformer>-->
<!--              </transformers>-->
<!--              <finalName>dataReporter</finalName>-->
<!--              <shadedArtifactAttached>true</shadedArtifactAttached>-->
<!--              <shadedClassifierName>jar-with-dependencies</shadedClassifierName>-->
<!--&lt;!&ndash;              <shadedClassifierName>dataReporter</shadedClassifierName>&ndash;&gt;-->
<!--            </configuration>-->
<!--          </execution>-->
        </executions>
      </plugin>
    </plugins>
    </pluginManagement>
  </build>
</project>
